# facial-attendance-system

./: .replit  README.md  SETUP_INSTRUCTIONS.md  app.py  models.py  pyproject.toml  replit.md  routes.py  run.py  setup_requirements.txt  utils.py
static/css/: style.css
static/face_encodings/: encoding_1.pkl
static/js/: camera.js  client.js  main.js
templates/: attendance_register.html  base.html  client.html  dashboard.html  id_card.html  login.html  manage_students.html  register_student.html  search_by_image.html  statistics.html
