[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Face Recognition Attendance System"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
